// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details View Initial state matches snapshot 1`] = `
<div
  className="section"
>
  <div
    className="level"
  >
    <Breadcrumb
      links={
        Array [
          Object {
            "href": "/ui/clusters/testCluster/schemas",
            "label": "Schema Registry",
          },
        ]
      }
    >
      test
    </Breadcrumb>
  </div>
  <div
    className="box"
  >
    <div
      className="level"
    >
      <div
        className="level-left"
      >
        <div
          className="level-item"
        >
          <div
            className="mr-1"
          >
            <b>
              Latest Version
            </b>
          </div>
          <div
            className="tag is-info is-light"
            title="Version"
          >
            #
            1
          </div>
        </div>
      </div>
      <div
        className="level-right buttons"
      >
        <Link
          className="button is-warning"
          to="/ui/clusters/testCluster/schemas/test/edit"
          type="button"
        >
          Edit Schema
        </Link>
        <button
          className="button is-danger"
          onClick={[Function]}
          type="button"
        >
          Remove
        </button>
        <mock-ConfirmationModal
          isOpen={false}
          onCancel={[Function]}
          onConfirm={[Function]}
        >
          Are you sure want to remove 
          <b>
            test
          </b>
           schema?
        </mock-ConfirmationModal>
      </div>
    </div>
    <LatestVersionItem
      schema={
        Object {
          "compatibilityLevel": "BACKWARD",
          "id": 1,
          "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord1\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
          "schemaType": "JSON",
          "subject": "test",
          "version": "1",
        }
      }
    />
  </div>
  <div
    className="box"
  >
    <table
      className="table is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Version
          </th>
          <th>
            ID
          </th>
          <th>
            Schema
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={10}
          >
            No active Schema
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Details View when page with schema versions is loading matches snapshot 1`] = `
<div
  className="section"
>
  <div
    className="level"
  >
    <Breadcrumb
      links={
        Array [
          Object {
            "href": "/ui/clusters/testCluster/schemas",
            "label": "Schema Registry",
          },
        ]
      }
    >
      test
    </Breadcrumb>
  </div>
  <PageLoader />
</div>
`;

exports[`Details View when page with schema versions loaded when schema has versions matches snapshot 1`] = `
<div
  className="section"
>
  <div
    className="level"
  >
    <Breadcrumb
      links={
        Array [
          Object {
            "href": "/ui/clusters/testCluster/schemas",
            "label": "Schema Registry",
          },
        ]
      }
    >
      test
    </Breadcrumb>
  </div>
  <div
    className="box"
  >
    <div
      className="level"
    >
      <div
        className="level-left"
      >
        <div
          className="level-item"
        >
          <div
            className="mr-1"
          >
            <b>
              Latest Version
            </b>
          </div>
          <div
            className="tag is-info is-light"
            title="Version"
          >
            #
            1
          </div>
        </div>
      </div>
      <div
        className="level-right buttons"
      >
        <Link
          className="button is-warning"
          to="/ui/clusters/testCluster/schemas/test/edit"
          type="button"
        >
          Edit Schema
        </Link>
        <button
          className="button is-danger"
          onClick={[Function]}
          type="button"
        >
          Remove
        </button>
        <mock-ConfirmationModal
          isOpen={false}
          onCancel={[Function]}
          onConfirm={[Function]}
        >
          Are you sure want to remove 
          <b>
            test
          </b>
           schema?
        </mock-ConfirmationModal>
      </div>
    </div>
    <LatestVersionItem
      schema={
        Object {
          "compatibilityLevel": "BACKWARD",
          "id": 1,
          "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord1\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
          "schemaType": "JSON",
          "subject": "test",
          "version": "1",
        }
      }
    />
  </div>
  <div
    className="box"
  >
    <table
      className="table is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Version
          </th>
          <th>
            ID
          </th>
          <th>
            Schema
          </th>
        </tr>
      </thead>
      <tbody>
        <SchemaVersion
          key="1"
          version={
            Object {
              "compatibilityLevel": "BACKWARD",
              "id": 1,
              "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord1\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
              "schemaType": "JSON",
              "subject": "test",
              "version": "1",
            }
          }
        />
        <SchemaVersion
          key="2"
          version={
            Object {
              "compatibilityLevel": "BACKWARD",
              "id": 2,
              "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord2\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
              "schemaType": "JSON",
              "subject": "test",
              "version": "2",
            }
          }
        />
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Details View when page with schema versions loaded when versions are empty matches snapshot 1`] = `
<div
  className="section"
>
  <div
    className="level"
  >
    <Breadcrumb
      links={
        Array [
          Object {
            "href": "/ui/clusters/testCluster/schemas",
            "label": "Schema Registry",
          },
        ]
      }
    >
      test
    </Breadcrumb>
  </div>
  <div
    className="box"
  >
    <div
      className="level"
    >
      <div
        className="level-left"
      >
        <div
          className="level-item"
        >
          <div
            className="mr-1"
          >
            <b>
              Latest Version
            </b>
          </div>
          <div
            className="tag is-info is-light"
            title="Version"
          >
            #
            1
          </div>
        </div>
      </div>
      <div
        className="level-right buttons"
      >
        <Link
          className="button is-warning"
          to="/ui/clusters/testCluster/schemas/test/edit"
          type="button"
        >
          Edit Schema
        </Link>
        <button
          className="button is-danger"
          onClick={[Function]}
          type="button"
        >
          Remove
        </button>
        <mock-ConfirmationModal
          isOpen={false}
          onCancel={[Function]}
          onConfirm={[Function]}
        >
          Are you sure want to remove 
          <b>
            test
          </b>
           schema?
        </mock-ConfirmationModal>
      </div>
    </div>
    <LatestVersionItem
      schema={
        Object {
          "compatibilityLevel": "BACKWARD",
          "id": 1,
          "schema": "{\\"type\\":\\"record\\",\\"name\\":\\"MyRecord1\\",\\"namespace\\":\\"com.mycompany\\",\\"fields\\":[{\\"name\\":\\"id\\",\\"type\\":\\"long\\"}]}",
          "schemaType": "JSON",
          "subject": "test",
          "version": "1",
        }
      }
    />
  </div>
  <div
    className="box"
  >
    <table
      className="table is-fullwidth"
    >
      <thead>
        <tr>
          <th>
            Version
          </th>
          <th>
            ID
          </th>
          <th>
            Schema
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            colSpan={10}
          >
            No active Schema
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Details View when page with schemas are loading matches snapshot 1`] = `
<div
  className="section"
>
  <div
    className="level"
  >
    <Breadcrumb
      links={
        Array [
          Object {
            "href": "/ui/clusters/testCluster/schemas",
            "label": "Schema Registry",
          },
        ]
      }
    >
      test
    </Breadcrumb>
  </div>
  <PageLoader />
</div>
`;
